1998-12-02  Martin Baulig  <martin@home-of-linux.org>

	* gnome-properties.c: Added new GnomeProperty code here.

	* gnome-property-entries.[ch]: New files. Makes it more easy
	to create commonly used property entries like font properties etc.

1998-12-01  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_button_press): Grab the rectangle
	selection item to grab the mouse.
	(gil_button_release): Ungrab the item and thus the mouse.
	(gil_button_press): Use a nice stipple pattern for the selection
	rectangle.
	(gil_mark_region): Do not look amateurish; make the selection
	rectangle only extend to the borders of the window.
	(gnome_icon_list_thaw): Do not allow thaws if the freeze counter
	is <= zero.
	Reverted all gil->frozen > 0 tests.

1998-12-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_mark_region): New routine.  Expand the
	selection on the timeout handler as well.  This makes the banding
	selection in the GnomeIconList much nicer when the mouse is
	outside of the window.

1998-12-01  Justin Maurer  <justin@openprojects.net>

	* gnome-paper-selector.[ch]: i f'ed up. checking in old versions. 
	starting again.

1998-12-01  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-app-helper.[ch]:
	Updated API docs a bit.

	(gnome_app_fill_menu, gnome_app_fill_menu_custom):
	Changed insert_shortcuts to a gboolean.
	Reformatted surrounding comments to fit in 80 columns.

1998-12-01  Dietmar Maurer  <dm@vlsivie.tuwien.ac.at>

	* gnome-app-helper.[ch]: use the new gtk_pixmap_menu_item.
	Removed indent_missing_pixmap parameter, since correct
	indentation is handled by gtk_pixmap_menu_item. 
	create_pixmap_and_label replaced by create_label.

	* gtkpixmapmenuitem.c: added new remove function.
	
1998-12-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c, gnome-mdi-child.[ch], gnome-mdi-generic-child.[ch]
	gnome-mdi-session.c: applied James Henstridge's interp modifications